--- a/ProjectFrontEnd/Kidpay/css/page.css
+++ b/ProjectFrontEnd/Kidpay/css/page.css
@@ -578,25 +578,60 @@ body {
     background-color: #649a58;
 }
 
-.footer-container {
-    height: 400px;
-    margin: 10px 50px;
-    padding: 30px;
-    background-image: url(../img/footer-pattan-right.png);
-    background-repeat: no-repeat;
-    background-position: right top;
-    margin-right: 10px;
-    position: relative;
+footer:before {
+    background: transparent url(img/footer-pattan-left) no-repeat scroll 0 0;
+    position: absolute;
+    content: "";
+    left: 0;
+    right: auto;
+    bottom: 0;
+    width: 479px;
+    height: 601px;
 }
 
-background-image: url(../img/footer-pattan-left.png);
-background-image: url(../img/footer-pattan-right.png);
+footer:after {
+    background: transparent url(img/footer-pattan-right) no-repeat scroll 0 0;
+    position: absolute;
+    content: "";
+    left: auto;
+    right: 0;
+    bottom: 0;
+    width: 365px;
+    height: 482px;
+}
+
+ :before,
+ :after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.footer-container {
+    border: 2px solid red;
+    height: 850px;
+    width: 100%;
+}
+
+.row {
+    border: 2px solid rebeccapurple;
+    height: 330px;
+    width: 90%;
+    margin-left: 75px;
+    margin-top: 420px;
+}
+
+.col-3 {
+    border: 2px solid green;
+    height: 300px;
+    width: 22%;
+    display: inline-block;
+    padding: 10px;
+    background-color: white;
+}
+
 .h2 {
     color: #000000;
-}
-
-.footer-blok {
-    margin-right: 90px;
 }
 
 .footer-blok ul {
@@ -610,10 +645,6 @@ background-image: url(../img/footer-pattan-right.png);
     color: #a4a4a4;
 }
 
-.extra-link {
-    margin-right: 30px;
-}
-
 .extra-link ul {
     list-style: none;
     padding: 0;
@@ -623,10 +654,6 @@ background-image: url(../img/footer-pattan-right.png);
 .extra-link ul li {
     margin: 30px 0px;
     color: #a4a4a4;
-}
-
-.my-account {
-    margin-right: 90px;
 }
 
 .my-account ul {
@@ -647,7 +674,7 @@ background-image: url(../img/footer-pattan-right.png);
 }
 
 .contact ul li {
-    margin: 30px 0px;
+    margin: 27px 0px;
     color: #a4a4a4;
 }
 
