--- a/ProjectFrontEnd/MyPortfolio/css/style.css
+++ b/ProjectFrontEnd/MyPortfolio/css/style.css
@@ -4,11 +4,13 @@
     box-sizing: border-box;
 }
 body{
-    margin: 0px;
-    font:400 0.9em 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: #555;
     background: #fff;
-    line-height: 1.5
+    font-size: 0.9em;
+    font-weight: 400;
+    line-height: 1.5;
+    margin: 0px;  
 }
 
 h1,
@@ -128,7 +130,7 @@ padding-right: 11px;
     margin: 0px 200px ;
 }
  .image{
-     border: 7px solid #ffb400;
+     border: 6px solid #ffb400;
 }
  .image img{
      height: 440px;
@@ -258,28 +260,16 @@ padding-right: 11px;
      grid-template-columns: 1fr 1fr 1fr;
      grid-template-rows: 1fr 1fr;
      grid-gap: 20px;
+     cursor: pointer;
 }
- .images:hover .overlay {
-    opacity: 1;
- }
  .images img{
     width: 100%;
     height: 100%;
     object-fit: cover;
- }
- .images img:hover{
-    background-color: #ffb400;
- }
- .overlay{
-    position: absolute;
-    top: 23%;
-    left: 10%;
- }
- .format{
-    color: white;
-    font-size: 20px;
-    text-align: center;
- }
+    border-radius: 4px;
+    position: relative;
+}
+ 
  /* Content Stayls*/
  #contact{   
     background-color: #222;
