--- a/ProjectFrontEnd/MyPortfolio/css/style.css
+++ b/ProjectFrontEnd/MyPortfolio/css/style.css
@@ -54,27 +54,50 @@ a {
     width: 60px;
     background-color: #333;
     border-radius: 30px;
+    
   }
   
   .navbar-nav a {
     display: block;
-    text-align: center;
     padding: 16px;
+    width: 50px;
    color: white;
-   }
+   display: flex;
+    justify-content: space-between;
+    align-items: center;
   
+   
+   }
+   .navbar-nav i{
+    padding-left: 7px;
+   }
+   .navbar-nav span{
+       margin-left: 30px;
+       width: 200px;
+       border: 1px solid white;
+       display: block;
+   }
 .bars{
-    border: 1px solid white;
-    height: 70px;
-    width: 70px;
+    background-color: #555;
+    height: 60px;
+    width: 60px;
     border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
   
 }
 .bars a{
-    font-size: 50px;
+    font-size: 20px;
     text-align: center;
     margin: 10px;
     text-decoration: none;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    
+
 }
 .bars:hover{
     
